# torrenter

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  conanfile.py
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: app.cpp  app.hpp  lib.cpp  lib.hpp  main.cpp
source/auxiliary/: big_endian.hpp  error_propagation_macro.hpp  peer_id.hpp  random.hpp  variant_aux.hpp
source/bitTorrent/: bencode.cpp  bencode.hpp  messages.hpp  tracker_messages.hpp
source/bitTorrent/metadata/: bencode.cpp  bencode.hpp  torrentfile.hpp
source/client/: context.hpp  peer.cpp  peer.hpp  torrenter.cpp  torrenter.hpp
source/client/downloader/: downloader.cpp  downloader.hpp
source/client/peer_pool/: peer_pool.hpp
source/client/reactor/: reactor.hpp
source/client/reactor/strategy/: strategy.hpp
source/client/storage/: storage.cpp  storage.hpp
source/client/tracker/: tracker.cpp  tracker.hpp
source/client/transmit/: boost_transmit.cpp  boost_transmit.hpp  transmit.cpp
source/torrent/: messages.hpp  tracker_messages.hpp
source/torrent/bitfield/: bitfield.cpp  bitfield.hpp
source/torrent/metadata/: bencode.cpp  bencode.hpp  torrentfile.cpp  torrentfile.hpp
source/utp/: packet.h
test/: CMakeLists.txt
test/source/: torrentpp_test.cpp
test/source/bitTorrent/: bencode_test.cpp  protocol_test.cpp
test/source/utp/: packet_test.cpp
